@@ -105,7 +105,6 @@ extern void cm_LaTeX (int arg),
   cm_insert_copying (void),
   cm_guilsinglleft (int arg),
   cm_guilsinglright (int arg),
-  cm_minus (int arg),
   cm_point (int arg),
   cm_print (int arg),
   cm_punct (int arg),
