@@ -1,5 +1,12 @@
 2008-04-09  Karl Berry  <karl@gnu.org>
 
+	* doc/texinfo.txi (geq leq): New node to document new commands
+	@geq and @leq, suggested by Arnold Robbins.
+	* doc/texinfo.tex (\geq, \leq): new macros.
+	* makeinfo/cmds.c (cm_geq, cm_leq): new fns.
+	(cm_minus): make static.
+	* makeinfo/cmds.h (cm_minus): remove decl.
+
 	* makeinfo/insertion.c (handle_verbatim): ignore rest of @verbatim
 	line, including the newline.
 	Report from Thien-Thi Nguyen, 01 Apr 2008 11:14:48.
